finally fixed stretching the background image for landscape mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html {
   font-size: 62.5%;
   width:100%;
   margin:0;
-  padding:0;
+  padding: env(safe-area-inset);
 }
 
 body {
